@@ -13,6 +13,8 @@ $Id$
         * src/mailbox.[ch]: mailbox_is_checking_set() now takes a bool
           and emits MAILBOX_UNSET_CHECKING if the mailbox has been
           checked.
+        * src/plugins/pop3/pop3.c, src/plugins/imap/imap.c:
+          Fixed ecore event handling
 
 2004-04-09 Tilman Sauerbeck <tilman -at- code-monkey.de>
         * src/plugins/pop3/pop3.c: The POP3 plugin will now tell you
